avoids “hover gap” for anchors
When hovering between the headlines and the # anchor left of the
headline, the hover state got lost. By using padding instead of margin,
both parts get connected.

--- a/stylesheets/livingstyleguide/_content.scss
+++ b/stylesheets/livingstyleguide/_content.scss
@@ -54,10 +54,11 @@
   display: inline;
   margin-left: -1.3em;
   opacity: 0;
+  padding-right: 0.3em;
   position: absolute;
   text-align: right;
   text-decoration: none;
-  width: 1em;
+  width: 1.3em;
 
   .lsg--headline:hover &,
   .lsg--sub-headline:hover &,
